Add SimpleQuiz html app folder

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>GAE Statitude</title> 
+		<title>GAE Statitude</title>
 		<link href="css/launch.css" rel="stylesheet">
-	</head> 
+	</head>
 	<body>
     <div id="container">
 		<div id="header">
 			<h2>Straight outta Python</h2>
 		</div>
 		<nav id="main">
-        
+
 			<ul>
             <br />
+						<li>
+						<a href = "SimpleQuiz/simpleQuiz.html">Flametree's JS Coding Book exercise</a>
+						</li>
            <li>
             <a href = "html/jump4joy.html">HF jQuery - ch3 -Jump for Joy</a>
            </li>
            <li>
             <a href = "html/index.html">Learning jQuery Chapter 3 style switcher</a>
-           </li>       
+           </li>
            <li>
             <a href = "html/cardz.html">Animating Info Cards</a>
-           </li>  
+           </li>
          </ul>
        </nav>
 
