moved simple quiz files to the same folder structure as the siblings so they play nice with the python launcher app

--- a/html/simpleQuiz.html
+++ b/html/simpleQuiz.html
@@ -10,8 +10,8 @@
 		<title>A Simple Quiz</title>
 		
 		<!--This script element links to an external script...-->
-	    <script type="text/javascript" src="js/QuizQuestion.js"></script>
-		<script type="text/javascript" src="js/SimpleQuiz.js"></script>
+	    <script type="text/javascript" src="/js/QuizQuestion.js"></script>
+		<script type="text/javascript" src="/js/SimpleQuiz.js"></script>
 	</head>
 	
 	<body>
