--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<ul>
             <br />
 						<li>
-						<a href = "SimpleQuiz/simpleQuiz.html">Flametree's JS Coding Book exercise</a>
+						<a href = "html/simpleQuiz.html">Flametree's JS Coding Book exercise</a>
 						</li>
            <li>
             <a href = "html/jump4joy.html">HF jQuery - ch3 -Jump for Joy</a>
