jump4joy - try to fix wrong color on winning code

--- a/html/jump4joy.html
+++ b/html/jump4joy.html
@@ -2,14 +2,14 @@
 <html>
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 	<head>
-		<title>Jump for Joy</title> 
+		<title>Jump for Joy</title>
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css"> 
+	   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
 		<link rel="stylesheet" href="/css/my_style.css" >
 
- 
-	</head> 
+
+	</head>
 	<body>
 		<!-- Always shows a header, even in smaller screens. -->
 		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -21,7 +21,7 @@
 			  <div class="mdl-layout-spacer"></div>
 			  <!-- Navigation. We hide it in small screens. -->
 			  <nav class="mdl-navigation mdl-layout--large-screen-only">
-				<a class="mdl-navigation__link" href="../">Home hinky</a> 
+				<a class="mdl-navigation__link" href="../">Home hinky</a>
 				<a class="mdl-navigation__link" href="">Pink</a>
 				<a class="mdl-navigation__link" href="">Mink</a>
 				<a class="mdl-navigation__link" href="">Plink</a>
@@ -31,7 +31,7 @@
 		  <div class="mdl-layout__drawer">
 			<span class="mdl-layout-title">Layout Drawer Title</span>
 			<nav class="mdl-navigation">
-			  <a class="mdl-navigation__link" href="../">Home hinky</a> 
+			  <a class="mdl-navigation__link" href="../">Home hinky</a>
 			  <a class="mdl-navigation__link" href="">Linky</a>
 			  <a class="mdl-navigation__link" href="">Dink</a>
 			  <a class="mdl-navigation__link" href="">Skink</a>
@@ -43,22 +43,22 @@
 					<div class="guess_box"><img src="/images/jump2.jpg"/></div>
 					<div class="guess_box"><img src="/images/jump3.jpg"/></div>
 					<div class="guess_box"><img src="/images/jump4.jpg"/></div>
-					<br />  
+					<br />
 					<div class= "result_box" id="result">
-					<p>				 
+					<p>
 						<!-- MDL:  Accent-colored raised button with ripple -->
 						<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  mdl-button--colored" onclick="myReloader()">
-						Reload page 
-						</button>							
-					 </p>              
-					</div> 
+						Reload page
+						</button>
+					 </p>
+					</div>
 			</div>
 		  </main>
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-		<script src="/js/my_scripts.js"></script>     
-  
+		<script src="/js/jump4joy.js"></script>     
+
 	</body>
 </html>
