--- a/html/jump4joy.html
+++ b/html/jump4joy.html
@@ -5,9 +5,9 @@
 		<title>Jump for Joy</title>
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+	    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
 		<link rel="stylesheet" href="/css/my_style.css" >
-
+		<!-- I am trying out Material Design Light -->
 
 	</head>
 	<body>
@@ -44,7 +44,7 @@
 					<div class="guess_box"><img src="/images/jump3.jpg"/></div>
 					<div class="guess_box"><img src="/images/jump4.jpg"/></div>
 					<br />
-					<div class= "result_box" id="result">
+					<div class= "result_box">
 					<p>
 						<!-- MDL:  Accent-colored raised button with ripple -->
 						<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  mdl-button--colored" onclick="myReloader()">
