--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>GAE Statitude</title>
-		<link href="css/launch.css" rel="stylesheet">
-	</head>
-	<body>
-    <div id="container">
-		<div id="header">
-			<h2>Straight outta Python</h2>
-		</div>
-		<nav id="main">
+<head>
+  <title>GAE Statitude</title>
+  <link href="css/launch.css" rel="stylesheet">
+</head>
+<body>
+  <div id="container">
+    <div id="header">
+      <h3>Static files served by Google App Engine's
+        <a href=https://cloud.google.com/appengine/docs/standard/python/tools/webapp2>webapp2</a>
+        Python framework</h3>
+      </div>
+      <nav id="main">
+        <ul>
+          <li>
+            <a href = "html/jump4joy.html">Head First jQuery - Ch3 -Jump for Joy exercise with mods including Material Design Light</a>
+          </li>
+          <li>
+            <a href = "html/simpleQuiz.html">Flametree's "Coding Javascript Basics" Book exercise, also with added MDL</a>
+          </li>
+          <li>
+            <a href = "html/index.html">Packt "Learning jQuery" Chapter 3 style switcher</a>
+          </li>
+          <li>
+            <a href = "html/cardz.html">Animating Info Cards based on a  Web Designer UK article</a>
+          </li>
+        </ul>
+      </nav>
 
-			<ul>
-            <br />
-						<li>
-						<a href = "html/simpleQuiz.html">Flametree's JS Coding Book exercise</a>
-						</li>
-           <li>
-            <a href = "html/jump4joy.html">HF jQuery - ch3 -Jump for Joy</a>
-           </li>
-           <li>
-            <a href = "html/index.html">Learning jQuery Chapter 3 style switcher</a>
-           </li>
-           <li>
-            <a href = "html/cardz.html">Animating Info Cards</a>
-           </li>
-         </ul>
-       </nav>
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-     </div>
-	</body>
-</html>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    </div>
+  </body>
+  </html>
