--- a/html/jump4joy.html
+++ b/html/jump4joy.html
@@ -1,64 +1,95 @@
 <!DOCTYPE html>
 <html>
-<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-	<head>
-		<title>Jump for Joy</title>
+<!--<meta name="viewport" content="width=device-width,
+initial-scale=1.0">-->
+<head>
+	<title>Jump for Joy</title>
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-		<link rel="stylesheet" href="/css/my_style.css" >
-		<!-- I am trying out Material Design Light -->
-
-	</head>
-	<body>
-		<!-- Always shows a header, even in smaller screens. -->
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-		  <header class="mdl-layout__header">
-			<div class="mdl-layout__header-row">
-			  <!-- Title -->
-			  <span class="mdl-layout-title">Jump for Joy Sale</span>
-			  <!-- Add spacer, to align navigation to the right -->
-			  <div class="mdl-layout-spacer"></div>
-			  <!-- Navigation. We hide it in small screens. -->
-			  <nav class="mdl-navigation mdl-layout--large-screen-only">
+	<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link
+	rel="stylesheet"
+	href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+	<link
+	rel="stylesheet" type="text/css" href="/css/my_style.css" >
+	<!-- I am trying out Material Design Light -->
+</head>
+<body>
+	<!-- Always shows a header, even in smaller screens. -->
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		<header
+		class="mdl-layout__header">
+		<div class="mdl-layout__header-row">
+			<!--
+			Title -->
+			<span class="mdl-layout-title">Jump for Joy Sale</span>
+			<!--
+			Add spacer, to align navigation to the right -->
+			<div
+			class="mdl-layout-spacer"></div>
+			<!-- Navigation. We hide it in small
+			screens. -->
+			<nav class="mdl-navigation mdl-layout--large-screen-only">
 				<a class="mdl-navigation__link" href="../">Home hinky</a>
-				<a class="mdl-navigation__link" href="">Pink</a>
-				<a class="mdl-navigation__link" href="">Mink</a>
-				<a class="mdl-navigation__link" href="">Plink</a>
-			  </nav>
-			</div>
-		  </header>
-		  <div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">Layout Drawer Title</span>
-			<nav class="mdl-navigation">
-			  <a class="mdl-navigation__link" href="../">Home hinky</a>
-			  <a class="mdl-navigation__link" href="">Linky</a>
-			  <a class="mdl-navigation__link" href="">Dink</a>
-			  <a class="mdl-navigation__link" href="">Skink</a>
+				<a
+				class="mdl-navigation__link" href="#">Hello</a>
+				<a
+				class="mdl-navigation__link" href="#">World.</a>
+				<a
+				class="mdl-navigation__link" href="#">How</a>
+				<a
+				class="mdl-navigation__link" href="#">Are</a>
+				<a
+				class="mdl-navigation__link" href="#">You?</a>
 			</nav>
-		  </div>
-		  <main class="mdl-layout__content">
-			<div class="page-content">
-					<div class="guess_box"><img src="/images/jump1.jpg"/></div>
-					<div class="guess_box"><img src="/images/jump2.jpg"/></div>
-					<div class="guess_box"><img src="/images/jump3.jpg"/></div>
-					<div class="guess_box"><img src="/images/jump4.jpg"/></div>
-					<br />
-					<div class= "result_box">
-					<p>
-						<!-- MDL:  Accent-colored raised button with ripple -->
-						<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect  mdl-button--colored" onclick="myReloader()">
-						Reload page
-						</button>
-					 </p>
-					</div>
-			</div>
-		  </main>
 		</div>
+	</header>
+	<div class="mdl-layout__drawer">
+		<span
+		class="mdl-layout-title">Layout Drawer Title</span>
+		<nav
+		class="mdl-navigation">
+		<a class="mdl-navigation__link" href="../">Home
+			hinky</a>
+			<a class="mdl-navigation__link" href="">Linky</a>
+			<a
+			class="mdl-navigation__link" href="">Dink</a>
+			<a
+			class="mdl-navigation__link" href="">Skink</a>
+		</nav>
+	</div>
+	<main
+	class="mdl-layout__content">
+	<div class="page-content">
+		<div
+		class="guess_box"><img src="/images/jump1.jpg"/></div>
+		<div
+		class="guess_box"><img src="/images/jump2.jpg"/></div>
+		<div
+		class="guess_box"><img src="/images/jump3.jpg"/></div>
+		<div
+		class="guess_box"><img src="/images/jump4.jpg"/></div>
+		<br />
+		<div
+		class= "result_box">
+		<p class="hint">Pick a Jumper!<p>
+			<p
+			class="reloader" >
+			<!-- MDL:  Accent-colored raised button with ripple -->
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
+			mdl-button--colored" onclick="myReloader()">
+			Reload page
+		</button>
+	</p>
+</div>
+</div>
+</main>
+</div>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-		<script src="/js/jump4joy.js"></script>     
+<script
+src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+<script src="/js/jump4joy.js"></script>
 
-	</body>
+</body>
 </html>
