--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
           </li>
         </ul>
       </nav>
-
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <div id="footer">
+      <h3>Back to <a href=http://chilismaug.github.io/appfolio/>Github Pages Site</a>
+      </div>
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   </body>
   </html>
