change reload link label
change reload page to play again

--- a/html/jump4joy.html
+++ b/html/jump4joy.html
@@ -78,7 +78,7 @@ initial-scale=1.0">-->
 			<!-- MDL:  Accent-colored raised button with ripple -->
 			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect
 			mdl-button--colored" onclick="myReloader()">
-			Reload page
+			Play Again!
 		</button>
 	</p>
 </div>
